--- a/projects/ng-demo-lib/src/lib/nd-button/nd-button.component.html
+++ b/projects/ng-demo-lib/src/lib/nd-button/nd-button.component.html
@@ -1,3 +1,7 @@
-<p>
-  nd-button works!
-</p>
+<button [ngClass]="spinClasses" [ngStyle]="buttonStyles">
+  <span *ngIf="(type === 'add') && !loading">+</span>
+  <span *ngIf="loading" class="loading"></span>
+  <span [class.dynamic1]="suffix">
+    <ng-content></ng-content>
+  </span>
+</button>
