--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -31,6 +31,11 @@
         background-color: #3399ff;
         color: #fff;
       }
+      &.app-lang {
+        width: 80px;
+        height: 30px;
+        line-height: 30px;
+      }
     }
   }
 }
