chore: add translate instant

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <span routerLink="/button" routerLinkActive="Active">{{"button" | translate}}</span>
     <span routerLink="/loading" routerLinkActive="Active">{{"loading" | translate}}</span>
     <span class="app-lang" (click)="swithLang()">{{langTitle}}</span>
+    <span class="text">{{libName}}</span>
   </div>
   <router-outlet></router-outlet>
 </div>
