feat: add translate2

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,6 +1,7 @@
 .app-body {
-  width: 100%;
-  padding: 10px 30px;
+  width: 80%;
+  margin: 50px auto;
+  position: relative;
   .router-button {
     width: 100%;
     margin-bottom: 20px;
@@ -35,7 +36,18 @@
         width: 80px;
         height: 30px;
         line-height: 30px;
+        margin-left: 20px;
+        background-color: #f2f2f2;
+        position: absolute;
+        right: 20px;
+        &:hover {
+          background-color: #e5f2ff;
+        }
       }
     }
+  }
+  .router-content {
+    padding: 10px 30px;
+    box-sizing: border-box;
   }
 }
