--- a/src/app/button-demo/button-demo.component.html
+++ b/src/app/button-demo/button-demo.component.html
@@ -1,56 +1,56 @@
-<h2 class="title">按钮组</h2>
-<p>按钮用来进行用户操作与交互</p>
-<h3>1. 普通按钮</h3>
+<h2 class="title">{{"buttonD.name" | translate}}</h2>
+<p>{{"buttonD.title" | translate}}</p>
+<h3>1. {{"buttonD.normal" | translate}}</h3>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button>普通按钮</nd-button>
+  <nd-button>{{"buttonD.normal" | translate}}</nd-button>
 </div>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'cancel'">取消按钮</nd-button>
+  <nd-button [type]="'cancel'">{{"buttonD.cancel" | translate}}</nd-button>
 </div>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [style]="'max'">普通按钮</nd-button>
+  <nd-button [style]="'max'">{{"buttonD.normal" | translate}}</nd-button>
 </div>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'cancel'" [style]="'max'">取消按钮</nd-button>
-</div>
-
-<h3>2. 添加按钮</h3>
-<div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'add'">添加按钮</nd-button>
-</div>
-<div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'add'" [style]="'max'">添加按钮</nd-button>
+  <nd-button [type]="'cancel'" [style]="'max'">{{"buttonD.cancel" | translate}}</nd-button>
 </div>
 
-<h3>3. 重要按钮</h3>
+<h3>2. {{"buttonD.add" | translate}}</h3>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'major'">重要按钮</nd-button>
+  <nd-button [type]="'add'">{{"buttonD.add" | translate}}</nd-button>
 </div>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'major'" [style]="'max'">重要按钮</nd-button>
-</div>
-
-<h3>4. 禁用按钮</h3>
-<div style="margin-right: 10px;display: inline-block;">
-  <nd-button [disabled]="true">禁用按钮</nd-button>
-</div>
-<div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'add'" [disabled]="true">禁用按钮</nd-button>
-</div>
-<div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'major'" [disabled]="true">禁用按钮</nd-button>
-</div>
-<div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'cancel'" [disabled]="true">禁用按钮</nd-button>
+  <nd-button [type]="'add'" [style]="'max'">{{"buttonD.add" | translate}}</nd-button>
 </div>
 
-<h3>5. 状态按钮</h3>
+<h3>3. {{"buttonD.major" | translate}}</h3>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [loading]="true">状态按钮</nd-button>
+  <nd-button [type]="'major'">{{"buttonD.major" | translate}}</nd-button>
 </div>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'add'" [loading]="true">状态按钮</nd-button>
+  <nd-button [type]="'major'" [style]="'max'">{{"buttonD.major" | translate}}</nd-button>
+</div>
+
+<h3>4. {{"buttonD.disable" | translate}}</h3>
+<div style="margin-right: 10px;display: inline-block;">
+  <nd-button [disabled]="true">{{"buttonD.disable" | translate}}</nd-button>
 </div>
 <div style="margin-right: 10px;display: inline-block;">
-  <nd-button [type]="'major'" [loading]="true">状态按钮</nd-button>
+  <nd-button [type]="'add'" [disabled]="true">{{"buttonD.disable" | translate}}</nd-button>
+</div>
+<div style="margin-right: 10px;display: inline-block;">
+  <nd-button [type]="'major'" [disabled]="true">{{"buttonD.disable" | translate}}</nd-button>
+</div>
+<div style="margin-right: 10px;display: inline-block;">
+  <nd-button [type]="'cancel'" [disabled]="true">{{"buttonD.disable" | translate}}</nd-button>
+</div>
+
+<h3>5. {{"buttonD.state" | translate}}</h3>
+<div style="margin-right: 10px;display: inline-block;">
+  <nd-button [loading]="true">{{"buttonD.state" | translate}}</nd-button>
+</div>
+<div style="margin-right: 10px;display: inline-block;">
+  <nd-button [type]="'add'" [loading]="true">{{"buttonD.state" | translate}}</nd-button>
+</div>
+<div style="margin-right: 10px;display: inline-block;">
+  <nd-button [type]="'major'" [loading]="true">{{"buttonD.state" | translate}}</nd-button>
 </div>
